flash message z-index fix

--- a/www/assets/less/style.less
+++ b/www/assets/less/style.less
@@ -980,7 +980,7 @@ footer[role="contentinfo"] {
   font-family: @proxima;
   font-size: 14px;
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   left: 50%;
   margin-left: -210px;
   top: 250px;
